fix(layout): addressed x-overflow .body-param issue

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -6,6 +6,11 @@
     padding: 0 20px;
 }
 
+.body-param 
+{
+    overflow-x: scroll;
+}
+
 .opblock-tag-section
 {
     display: flex;
